--- a/Backend/.env
+++ b/Backend/.env
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:L9DxQ8zSdLFvwoA986DHYVwRgYIeCpxuLhE765i2bh0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
