--- a/Backend/.env
+++ b/Backend/.env
@@ -21,11 +21,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
- DB_HOST=127.0.0.1
-DB_PORT=3307
- DB_DATABASE=optistaff
-DB_USERNAME=root
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=optistaff
+DB_USERNAME=admin
 DB_PASSWORD=hr799496106
 
 SESSION_DRIVER=database
