--- a/Backend/.env
+++ b/Backend/.env
@@ -25,8 +25,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=optistaff
-DB_USERNAME=admin
-DB_PASSWORD=hr799496106
+DB_USERNAME=root
+DB_PASSWORD=
 
 
 SESSION_DRIVER=database
