--- a/Backend/.env
+++ b/Backend/.env
@@ -21,12 +21,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
- DB_HOST=127.0.0.1
-DB_PORT=3307
- DB_DATABASE=optistaff
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=optistaff
 DB_USERNAME=root
-DB_PASSWORD=hr799496106
+DB_PASSWORD=
+
+
+
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
