fixed all conflicts

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,11 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:L9DxQ8zSdLFvwoA986DHYVwRgYIeCpxuLhE765i2bh0=
+APP_KEY=base64:Ha3jItFm9WjTjLiVQmVQU0MLP5u5nO6vuyW01X0w/QE=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
-FRONTEND_URL=http://localhost:3000
-
-
+APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -23,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=optistaff
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=hr799496106
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -66,6 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
 
 OPENAI_API_KEY=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
 OPENAI_EMBED_MODEL=text-embedding-3-small 
