--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Ha3jItFm9WjTjLiVQmVQU0MLP5u5nO6vuyW01X0w/QE=
+APP_KEY=base64:FIuzQP4x1taqiYSlCswr8qa05PLrlTlPhN1fCfcxcDI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -21,11 +21,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=optistaff
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin
+DB_PASSWORD=hr799496106
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
