--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.2-apache
 
-# Set working directory
+# Set working directory first
 WORKDIR /var/www
 
 # Install system dependencies
@@ -13,27 +13,24 @@ RUN apt-get update && apt-get install -y \
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs
 
-COPY composer.json composer.lock ./
-
-COPY package*.json vite.config.js ./
-
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-
-# Copy backend code
-COPY . .
+# Copy composer.json & composer.lock for caching
+COPY composer.json composer.lock ./
 
 # Install PHP dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader
-RUN npm install
 
+# Copy frontend files and install npm dependencies
+COPY package*.json vite.config.js ./
+RUN npm install && npm run build
 
-RUN npm run build
+# Copy the rest of the backend code
+COPY . .
 
-# Optional: Install frontend dependencies (if building assets here)
-# RUN npm install && npm run build
-
+# Expose Laravel port
 EXPOSE 8000
 
+# Run migrations and start Laravel
 CMD ["sh", "-c", "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=8000"]
