--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -9,27 +9,24 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install gd pdo pdo_mysql bcmath zip
 
-# Install Node.js for Vite
+# Install Node.js
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs
 
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Copy only composer files first (for caching)
-COPY Backend/composer.json Backend/composer.lock ./
+# Copy the entire backend code **first**, including artisan
+COPY Backend/. .
 
 # Install PHP dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader
 
-# Copy frontend dependencies config
-COPY Backend/package*.json Backend/vite.config.js ./
-RUN npm install && npm run build
+# Install frontend dependencies
+RUN npm install
+RUN npm run build
 
-# Copy the rest of the backend code
-COPY Backend/. .
-
-# Expose Laravel port
+# Expose port
 EXPOSE 8000
 
 # Run migrations and start Laravel
