changed dockerfile and yml file

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -16,8 +16,8 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
 # Install Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Copy the entire backend code **first**, including artisan
-COPY Backend/. .
+# Copy backend code (build context is ./Backend)
+COPY . .
 
 # Install PHP dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader
