--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -9,21 +9,19 @@
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
         "blade-ui-kit/blade-icons": "^1.8",
+        "fakerphp/faker": "^1.24",
+        "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
+        "laravel/pail": "^1.2",
+        "laravel/pint": "^1.25",
+        "laravel/sail": "^1.46",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "openai-php/client": "^0.16.0",
-        "ramsey/uuid": "^4.9"
-    },
-    "require-dev": {
-        "fakerphp/faker": "^1.23",
-        "laravel/breeze": "^2.3",
-        "laravel/pail": "^1.2.2",
-        "laravel/pint": "^1.13",
-        "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
-        "nunomaduro/collision": "^8.6",
-        "phpunit/phpunit": "^11.5.3"
+        "nunomaduro/collision": "^8.8",
+        "openai-php/client": "^0.16.0",
+        "phpunit/phpunit": "^11.5",
+        "ramsey/uuid": "^4.9"
     },
     "autoload": {
         "psr-4": {
