--- a/Backend/.env
+++ b/Backend/.env
@@ -25,7 +25,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=optistaff
 DB_USERNAME=root
-DB_PASSWORD=123456
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
