--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "blade-ui-kit/blade-heroicons": "^2.6",
         "blade-ui-kit/blade-icons": "^1.8",
         "fakerphp/faker": "^1.24",
@@ -21,7 +22,8 @@
         "nunomaduro/collision": "^8.8",
         "openai-php/client": "^0.16.0",
         "phpunit/phpunit": "^11.5",
-        "ramsey/uuid": "^4.9"
+        "ramsey/uuid": "^4.9",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "autoload": {
         "psr-4": {
